--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /client/DistributedChatRoom.pro.user
+/client/DistributedChatRoom.pro.user*
 /client/build/
 /server/GateServer/GateServer/
 /server/GateServer/x64/
