--- a/server/VarifyServer/package.json
+++ b/server/VarifyServer/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.12.2",
     "@grpc/proto-loader": "^0.7.13",
+    "ioredis": "^5.4.1",
     "nodemailer": "^6.9.15",
+    "redis": "^4.7.0",
     "uuid": "^10.0.0"
   }
 }
