--- a/server/GateServer/config.ini
+++ b/server/GateServer/config.ini
@@ -3,6 +3,10 @@ Port = 8080
 [VarifyServer]
 Host = 127.0.0.1
 Port = 50051
+[Mysql]
+Host = 127.0.0.1
+Port = 3308
+Passwd = 123456
 [Redis]
 Host = 127.0.0.1
 Port = 6380
