feat: regist function ui

--- a/server/GateServer/config.ini
+++ b/server/GateServer/config.ini
@@ -6,7 +6,9 @@ Port = 50051
 [Mysql]
 Host = 127.0.0.1
 Port = 3308
+User = root
 Passwd = 123456
+Schema = usrInfo
 [Redis]
 Host = 127.0.0.1
 Port = 6380
